--- a/vignettes/magic.Rmd
+++ b/vignettes/magic.Rmd
@@ -28,7 +28,7 @@ devtools::install_github("furlan-lab/rustytools", force=T)
 ```
 
 
-## Overview of Magic implemented in Rust
+## Overview of Magic implemented in R and Rust
 
 *(“Markov Affinity-based Graph Imputation of Cells” – van Dijk et al., 2018)*
 
@@ -49,6 +49,8 @@ devtools::install_github("furlan-lab/rustytools", force=T)
 
 Compute *k* nearest neighbours in the *m*-dimensional PCA space
 (typically *k* ≈ 30, *m* ≈ 100).
+
+This is done by Seurat or related packages.
 
 #### 2 Adaptive Gaussian kernel
 
@@ -84,6 +86,13 @@ D_{ii} = \sum_{j} A_{ij}.
 $$
 
 Now each row of **P** sums to 1 → one step of a random walk on the cell graph.
+
+This is done in R:
+
+```{r, eval=F}
+row_sums <- Matrix::rowSums(A)
+P <- Matrix::Diagonal(x = 1 / pmax(row_sums, 1e-12)) %*% A
+```
 
 #### 4 Diffusion (raise to power *t*)
 
@@ -137,21 +146,6 @@ $$
 MAGIC performs this on a *graph* and stops at a user-chosen *t*
 (often 2–6); too small → little denoising, too large → over-smoothing.
 
----
-
-### Where our Rust kernel fits
-
-Steps 1–3 (k-NN, kernel, Markov row-normalisation) happen in R/Python.
-The Rust function `diffuse_expr_r()` you now have implements **step 4 + 5**:
-
-```text
-(P, X, t)  ──►  Ŷ = Pᵗ · X
-```
-
-It expects **P** already row-stochastic; raising to power *t* and the
-matrix–vector multiply are done in parallel for speed and memory
-efficiency.
-
 
 ---
 
@@ -184,17 +178,14 @@ $$
 
 ### Special cases
 
-* $\alpha = 0$:
-  $X_{\rm imp}(0) = X$.
-  No diffusion—returns the raw data unchanged.
+\[
+\begin{aligned}
+\alpha = 0:\quad &X_{\rm imp}(0) = X,\\
+\alpha = 1:\quad &X_{\rm imp}(1) = P^{t}X,\\
+0 < \alpha < 1:\quad &\text{Partial smoothing (convex blend of $X$ and $P^{t}X$).}
+\end{aligned}
+\]
 
-* $\alpha = 1$:
-  $X_{\rm imp}(1) = P^{\,t}X$.
-  Full MAGIC imputation.
-
-* $0 < \alpha < 1$:
-  Partial smoothing. Each entry is a convex combination of the raw and
-  diffused values.
 
 ### Per-entry formula
 
